--- a/sass/_var.sass
+++ b/sass/_var.sass
@@ -6,7 +6,9 @@ $ciBlue: #00FFF1
 $pale: #aaf0f0
 $ciRed: #ff00aa
 $red: #f44336
+$palered: #ff9b9b
 $ciGreen: #46fcb4
+$green2: #015733
 $second: #0c1016
 $white: #fff
 $black: #000
