--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,10 +21,11 @@ header
 // Logo and description
 
 #logo
-    // background-image: url("../../img/logo2.jpg")
-    // background-size: cover
-    // background-position: center
-    color: $white
+    background-image: url("../../img/logo2.jpg")
+    background-size: cover
+    background-position: center
+    color: $dark
+    font-weight: 700
     display: inline-block
     border: 5px solid $ciGreen
     font-size: 30px
@@ -71,10 +72,15 @@ header
     margin-right: 8px
     margin-left: 8px
 
-// #c1
-//     background-image: url("./../../img/viaggi.jpg")
-//     background-position: center
-//     background-size: cover
+#c1
+    background-image: url("./../../img/viaggi.jpg")
+    background-position: center
+    background-size: cover
+
+#c2
+    background-image: url("./../../img/sogno2.jpeg")
+    background-position: center
+    background-size: cover
 
 #nav .container a:hover
     color: $white
@@ -141,7 +147,8 @@ a:hover
     color: $dark
 
 #nav .container a
-    color: $darkBlue
+    color: $red
+    font-weight: 700
     text-decoration: none
 
 // RWD: Tablet
